try to setup DBContext

--- a/PhoneBookApi/appsettings.json
+++ b/PhoneBookApi/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "db" : {
-    "connectionstring" :  "blabla" 
+  "db": {
+    "serverInfo" :  "Server=tcp:phonebookserver.database.windows.net1433;Initial Catalog=PhoneBook_Florian;Persist Security Info=False;"
   } 
 }
